--- a/kingWeb/kingWeb/templates/adm/shared/layout_content.html
+++ b/kingWeb/kingWeb/templates/adm/shared/layout_content.html
@@ -34,6 +34,15 @@
     <script src="{%static 'lib/layer/src/layer.js' %}"></script>
     <link href="{%static 'lib/layer/src/theme/default/layer.css' %}" rel="stylesheet" />
 
+    <!--chosen-->
+    <script src="{%static 'lib/chosen/chosen.jquery.min.js' %}"></script>
+    <link href="{%static 'lib/chosen/chosen.min.css' %}" rel="stylesheet" />
+
+    <!--datetimePicker-->
+    <script src="{%static 'lib/datepicker/js/plugins/moment.min.js' %}"></script>
+    <script src="{%static 'lib/datepicker/js/datepicker.all.min.js' %}"></script>
+    <link href="{%static 'lib/datepicker/css/datepicker.css' %}" rel="stylesheet" />
+
     <script src="{%static 'js/lkWeb.js' %}" ></script>
     <link href="{%static 'css/site.css' %}" rel="stylesheet" />
 
