--- a/kingWeb/kingWeb/templates/adm/table_list/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/edit.html
@@ -76,7 +76,16 @@
             <input type="text" class="form-control" name="AllowExport" value="{{allowexport}}" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
-
+    <div class="form-group">
+            <label class="col-md-2 control-label">查看,添加编辑宽高</label>
+            <div class="col-md-4">
+                <input type="text" class="form-control" value="{{vieweditwidthheight}}" name="ViewEditWidthHeight" data-toggle="tooltip" title="width,height|width,height(单位px或%,非法值默认改为90%)" />
+            </div>
+            <label class="col-md-2 control-label">添加编辑,查看每行列数</label>
+            <div class="col-md-4">
+                <input type="text" class="form-control" value="{{columnperrow}}" name="ColumnPerRow" data-toggle="tooltip" title="2,2" />
+            </div>
+    </div>
     <div class="form-group">
         <label class="col-md-2 control-label">导入类型</label>
         <div class="col-md-4">
