--- a/kingWeb/kingWeb/templates/adm/table_column/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/add.html
@@ -48,7 +48,7 @@
         <div class="col-md-4">
             <input type="text" class="form-control" name="DataType"
                    data-val="true" data-val-maxlength="数据类型长度不能超过50个字符" data-val-maxlength-max="12"
-                   data-val-required="数据类型不能为空" data-toggle="tooltip" title="out/enum"/>
+                   data-val-required="数据类型不能为空" data-toggle="tooltip" title="out/enum/radio/checkbox/date/datetime"/>
             <span class="field-validation-valid" data-valmsg-for="DataType" data-valmsg-replace="true"></span>
         </div>
     </div>
@@ -126,6 +126,12 @@
         <div class="col-md-4">
             <input type="text" class="form-control" name="EnumRange" data-toggle="tooltip"  title="例如 模块,菜单,按钮" />
         </div>
+        <label class="col-md-2 control-label">单选/多选值范围</label>
+        <div class="col-md-4">
+            <input type="text" class="form-control" name="SelectRange" data-toggle="tooltip" title="例如 1,模块|2,菜单|3,按钮"/>
+        </div>
+    </div>
+
         <label class="col-md-2 control-label">是否主键</label>
         <div class="col-md-4">
             <input type="text" class="form-control" name="PrimarKey" />
