--- a/kingWeb/kingWeb/templates/adm/table_column/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/add.html
@@ -131,7 +131,7 @@
             <input type="text" class="form-control" name="SelectRange" data-toggle="tooltip" title="例如 1,模块|2,菜单|3,按钮"/>
         </div>
     </div>
-
+    <div class="form-group">
         <label class="col-md-2 control-label">是否主键</label>
         <div class="col-md-4">
             <input type="text" class="form-control" name="PrimarKey" />
