--- a/kingWeb/kingWeb/templates/adm/table_list/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/edit.html
@@ -109,13 +109,13 @@
         </div>
         <label class="col-md-2 control-label">允许删除条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenDeleteFilter" value="{{forbiddendeletefilter}}" data-toggle="tooltip" title="例如:Id > 10 或 not (id > 10)" />
+            <input type="text" class="form-control" name="ForbiddenDeleteFilter" value="{{forbiddendeletefilter}}" data-toggle="tooltip" title="例如: Id < 10 可选参数{UserId}" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">允许更新条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenUpdateFilter" value="{{forbiddenupdatefilter}}" data-toggle="tooltip" title="例如:Id > 10 或 not (id > 10)" />
+            <input type="text" class="form-control" name="ForbiddenUpdateFilter" value="{{forbiddenupdatefilter}}" data-toggle="tooltip" title="例如: Id < 10 可选参数{UserId}" />
         </div>
         <label class="col-md-2 control-label">允许添加条件</label>
         <div class="col-md-4">
